--- a/index.html
+++ b/index.html
@@ -4,41 +4,32 @@
   <meta charset="UTF-8">
   <title>Where Is My Bus?</title>
   <link rel="stylesheet" href="style.css">
-
-  <!-- Firebase v8 -->
-  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
-  <script src="firebaseConfig.js"></script>
 </head>
 
 <body>
 
-<!-- 🔐 AUTH CHECK -->
-<script>
-firebase.auth().onAuthStateChanged(user => {
-  if (!user) {
-    window.location.href = "login.html";
-  }
-});
-</script>
+<div class="hero-container">
+  <div class="hero-card">
 
-<div class="hero">
+    <img
+      src="bus-logo.png"
+      class="hero-logo"
+      alt="Bus Logo"
+      onerror="this.src='https://cdn-icons-png.flaticon.com/512/61/61231.png'"
+    >
 
-  <img src="bus-logo.png" class="logo"
-       onerror="this.src='https://cdn-icons-png.flaticon.com/512/61/61231.png'">
+    <h1 class="hero-title">Where Is My Bus?</h1>
+    <p class="hero-subtitle">
+      Real-Time Public Transport Tracking System
+    </p>
 
-  <h1>Where Is My Bus?</h1>
-  <p class="subtitle">Real-Time Public Transport Tracking System</p>
+    <div class="search-box">
+      <input list="locations" id="from" placeholder="From (Eg: Tambaram)">
+      <input list="locations" id="to" placeholder="To (Eg: Adyar)">
+      <button onclick="searchRoutes()">Search Routes</button>
+    </div>
 
-  <div class="search-card">
-    <input list="locations" id="from" placeholder="From">
-    <input list="locations" id="to" placeholder="To">
-    <button onclick="searchRoutes()">Search Routes</button>
   </div>
-
-  <button onclick="logout()" style="margin-top:20px;width:200px;">
-    Logout
-  </button>
 </div>
 
 <datalist id="locations">
@@ -65,14 +56,13 @@ firebase.auth().onAuthStateChanged(user => {
 function searchRoutes() {
   const from = document.getElementById("from").value.trim();
   const to = document.getElementById("to").value.trim();
-  if (!from || !to) return alert("Enter both locations");
-  window.location.href = `routes.html?from=${from}&to=${to}`;
-}
 
-function logout() {
-  firebase.auth().signOut().then(() => {
-    window.location.href = "login.html";
-  });
+  if (!from || !to) {
+    alert("Please enter both locations");
+    return;
+  }
+
+  window.location.href = `routes.html?from=${from}&to=${to}`;
 }
 </script>
 
